feat(dao): check user permision
